stylesheet.css
#backImg {
    opacity : 0.7;
    background-image: url('images/IMG_6371.jpg');
    background-size: cover;
    /* background-attachment: fixed; */
}

h1 {
    font-size: 3em;
    font-weight: 600;
    color: white;
    text-align: center;
    text-shadow: 3px 3px 3px black;
    margin-bottom: 0;
    margin-top: 0;
    padding-top: 300px;

}

#backImg h2 {
    font-size: 2em;
    font-weight: 600;
    color: white;
    text-align: center;
    text-shadow: 3px 3px 3px black;
    margin-top: 0;
    margin-bottom: 0;
    padding-bottom: 300px;

}

body {
    font-family: 'Raleway', sans-serif;
}

.section {
    font-size: 2em;
    color: rgb(94, 188, 199);
}

.nav-wrapper {
    background-color: white;
    
}

.section.one .material-icons {
    font-size: 5em;
    /* border: 1px solid rgb(94, 188, 199); */
    
    border-radius: 100px;
    padding: 20px;
    /* background-color: rgba(211, 217, 218, 0.555); */
    background-color: rgba(167, 213, 221, 0.555);
    color: white;
    
}

.section.one .material-icons:hover {
    background-color: rgba(137, 204, 216, 0.719); 
}

.row {
    text-align: center;
    
}

nav ul a{
    color: grey;
    text-transform: uppercase;
}

h3 {
    font-size: 28px;
    margin-top: 20px;
    font-weight: 700;
    text-transform: uppercase;
    
}
a h3 {
    color: rgba(137, 204, 216, 0.719); 
}

/* a:link{
    color: rgba(137, 204, 216, 0.719); 
    
} */
a h3:hover{
    color: rgba(101, 158, 168, 0.822);
}
/* a:active{
    color: rgba(167, 213, 221, 0.555);
} */

.section.one{
    margin-top: 200px;
    margin-bottom: 200px;
    padding: 0;
}

hr {
    border-top: 2px dotted #8c8b8b;
   
}


.section h2 {
    text-align: center;
    font-size: 32px;
    font-weight: 600;
    text-transform: uppercase;
    padding: 20px;
    padding-bottom: 80px;
    
}


.section.two {
    background-color: rgba(226, 206, 225, 0.555);
    color: white;
}

.section.two p {
    font-size: 18px;
}

.section.two li {
    padding: 10px;
    background-color:  rgba(180, 152, 179, 0.219);
border: 1px solid white;
    margin: 3%;
}

.section.two .material-icons {
    font-size: 3em;
    color: white;
    float: left;
    padding-right: 20px;
    
}

.section.three img{
width:100%;
float: left;
/* margin-bottom: 10px; */
opacity: 0.7;
}


.section.four {
    background-color: rgba(156, 150, 156, 0.315);
    color: white;
}

.section.four li {
    padding: 2%;
    margin: 1%;
    background-color: rgba(156, 150, 156, 0.171);
}

.post-preview {
    width: 100%;
    overflow: hidden;
    position: relative;
    margin: 0;
}

.projDetail {
    display: none;
    text-align: center;
    background: rgba(176, 176, 196, 0.925);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    color: white;
    font-size: 1.5rem;
  }
  .post-preview:hover .projDetail {
    display: block;
  }

  .nav-wrapper {
      box-shadow: none;
  }

